<resources>
    <string name="app_name">Memory Game</string>
    <string name="memory_game">Memory Game</string>
    <string name="snake_game">Snake Game</string>
    <string name="tetris_game">Tetris Game</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_difficulty">DifficultyActivity</string>
</resources>
