<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.bridgerhahn.memorygame.MainMenuActivity">

    <Button
            android:text="@string/memory_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memoryGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/snakeGameButton"/>
    <Button
            android:text="@string/snake_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/snakeGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/memoryGameButton"
            app:layout_constraintBottom_toTopOf="@+id/tetrisGameButton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tetrisGameButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/snakeGameButton"
            android:text="@string/tetris_game"/>
</android.support.constraint.ConstraintLayout>
